--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,4 +1,12 @@
-- id: eclipse
+---
+- id: google-java-formatter-jdk8
+  name: Google Java Formatter
+  description: "Runs the Google Java Formatter on Java source files. Minimum supported runtime version is JDK 8."
+  language: coursier
+  entry: google-java-format-jdk8
+  files: \.java$
+  require_serial: true
+- id: google-java-formatter-jdk11
   name: Google Java Formatter
   description: "Runs the Google Java Formatter on Java source files. Minimum supported runtime version is JDK 11."
   language: coursier
