add seiri-format config

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,12 +1,12 @@
 ---
-- id: google-java-formatter-jdk8
+- id: google-java-formatter-jdk11
   name: Google Java Formatter
-  description: "Runs the Google Java Formatter on Java source files. Minimum supported runtime version is JDK 8."
+  description: "Runs the Google Java Formatter on Java source files. Minimum supported runtime version is JDK 11."
   language: coursier
-  entry: google-java-format-jdk8
+  entry: google-java-format-jdk11
   files: \.java$
   require_serial: true
-- id: google-java-formatter-jdk11
+- id: seiri-format
   name: Google Java Formatter
   description: "Runs the Google Java Formatter on Java source files. Minimum supported runtime version is JDK 11."
   language: coursier
